[package]
name = "newsterm"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rss = "2"
html-escape = "0.2"
textwrap = "0.16"
open = "5"
chrono = "0.4"
