[package]
name = "newsterm"
version = "0.5.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rss = "2"
html-escape = "0.2"
textwrap = "0.16"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
cli-clipboard = "0.4"
readability = "0.3"
url = "2"
